<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/recurso_fondo_pantalla"
    tools:context=".Aplicacion.Login">

    <ImageView
        android:id="@+id/imgLogin"
        android:layout_width="205dp"
        android:layout_height="165dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/recurso_icono_login"
        tools:ignore="ContentDescription"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDniLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/estilo_editext"
            android:drawableStart="@drawable/recurso_ic_dni"
            android:drawablePadding="5dp"
            android:fontFamily="sans-serif-medium"
            android:freezesText="false"
            android:hint="@string/etDniLogin"
            android:inputType="textShortMessage"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textAllCaps="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout6"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/estilo_editext"
            android:drawableStart="@drawable/recurso_ic_pass"
            android:drawablePadding="5dp"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/etPassLogin"
            android:imeOptions="actionSend"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="135dp"
        android:layout_height="58dp"
        android:layout_marginStart="138dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="138dp"
        android:background="@drawable/estilo_boton"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/btnEntrar"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout7" />

    <CheckBox
        android:id="@+id/checkRecordatorio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:checked="false"
        android:text="@string/checkRecordatorio"
        app:buttonTint="#558B2F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout7" />

</androidx.constraintlayout.widget.ConstraintLayout>