<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutItemUsuarios"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    app:cardElevation="4dp"
    app:cardCornerRadius="20dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:id="@+id/imgUsuario"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                app:srcCompat="@drawable/recurso_ic_persona"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="false"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="4dp"
                android:layout_toEndOf="@+id/imgUsuario"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nomUsuarioLista"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/nomUsuarioLista"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/dniUsuarioLista"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dniUsuarioLista"
                    android:textSize="15sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/telUsuarioLista"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:text="@string/telUsuarioLista"
                android:textSize="17sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>