<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/recurso_fondo_pantalla"
    tools:context=".Aplicacion.Registrar">

    <ImageView
        android:id="@+id/imgRegistrar"
        android:layout_width="205dp"
        android:layout_height="165dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/recurso_icono_registrar"
        tools:ignore="ContentDescription"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgRegistrar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNombreR"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/estilo_editext"
            android:drawableStart="@drawable/recurso_ic_persona"
            android:drawablePadding="5dp"
            android:hint="@string/etNombreR"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textAllCaps="true"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTelefonoR"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/estilo_editext"
            android:drawableStart="@drawable/recurso_ic_phone"
            android:drawablePadding="5dp"
            android:hint="@string/etTelefonoR"
            android:inputType="phone"
            android:maxLength="9"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDniR"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/estilo_editext"
            android:drawableStart="@drawable/recurso_ic_dni"
            android:drawablePadding="5dp"
            android:hint="@string/etDniR"
            android:inputType="textShortMessage"
            android:maxLength="9"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textAllCaps="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassR"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/estilo_editext"
            android:drawableStart="@drawable/recurso_ic_pass"
            android:drawablePadding="5dp"
            android:hint="@string/etPassR"
            android:inputType="textPassword"
            android:maxLength="8"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassRConfirmar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/estilo_editext"
            android:drawableStart="@drawable/recurso_ic_pass"
            android:drawablePadding="5dp"
            android:hint="@string/etPassRConfirmar"
            android:inputType="textPassword"
            android:maxLength="8"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRegistrarR"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/estilo_boton"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/btnRegistrarR"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />
</androidx.constraintlayout.widget.ConstraintLayout>